--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -18,5 +20,6 @@ a:hover {
 }
 
 body {
+  font-family: 'Poppins', sans-serif;
   @apply max-w-md mx-auto min-w-[320px] min-h-screen flex text-[#333333];
 }
