--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,5 @@ a:hover {
 
 body {
   font-family: 'Poppins', sans-serif;
-  @apply max-w-md mx-auto min-w-[320px] min-h-screen flex text-[#333333];
+  @apply min-h-screen flex text-[#333333];
 }
